--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/skellm)](https://CRAN.R-project.org/package=skellm)
+[![R-CMD-check](https://github.com/calderonsamuel/skellm/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/calderonsamuel/skellm/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/calderonsamuel/skellm/branch/main/graph/badge.svg)](https://app.codecov.io/gh/calderonsamuel/skellm?branch=main)
 <!-- badges: end -->
 
 The goal of skellm is to ...
